sg.tf
resource "aws_security_group" "ecs" {
  name        = "${var.prefix}-${var.ecs_cluster_name}-${var.ecs_service_name}-ecs-sg"
  description = "Backend ECS"
  vpc_id      = var.vpc_id

  tags = {
    Name = "${var.prefix}-${var.ecs_cluster_name}-${var.ecs_service_name}-ecs-sg"
  }
}

resource "aws_security_group_rule" "ecs_ingress" {
  security_group_id        = aws_security_group.ecs.id
  type                     = "ingress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.alb.id
}

resource "aws_security_group_rule" "ecs_egress" {
  security_group_id = aws_security_group.ecs.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group" "alb" {
  name        = "${var.prefix}-${var.ecs_cluster_name}-${var.ecs_service_name}-alb-sg"
  description = "Backend ALB"
  vpc_id      = var.vpc_id

  tags = {
    Name = "${var.prefix}-${var.ecs_cluster_name}-${var.ecs_service_name}-alb-sg"
  }
}

resource "aws_security_group_rule" "alb_ingress_80" {
  security_group_id = aws_security_group.alb.id
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "alb_ingress_443" {
  security_group_id = aws_security_group.alb.id
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "alb_egress" {
  security_group_id = aws_security_group.alb.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}
